--- a/MicroDock/App.axaml
+++ b/MicroDock/App.axaml
@@ -1,5 +1,6 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:faStyle="clr-namespace:FluentAvalonia.Styling;assembly=FluentAvalonia"
              x:Class="MicroDock.App"
              xmlns:local="using:MicroDock"
              RequestedThemeVariant="Default">
@@ -11,5 +12,6 @@
   
     <Application.Styles>
         <FluentTheme />
+        <faStyle:FluentAvaloniaTheme PreferSystemTheme="True" PreferUserAccentColor="True" />
     </Application.Styles>
 </Application>
