--- a/MicroDock/Views/MainWindow.axaml
+++ b/MicroDock/Views/MainWindow.axaml
@@ -14,6 +14,7 @@
     x:DataType="vm:MainWindowViewModel"
     ExtendClientAreaToDecorationsHint="True"
     ExtendClientAreaChromeHints="NoChrome"
+    CanResize="False"
     Icon="/Assets/avalonia-logo.ico">
 
 	<Window.Styles>
