--- a/MicroDock/Views/Tabs/SettingsTabView.axaml
+++ b/MicroDock/Views/Tabs/SettingsTabView.axaml
@@ -12,6 +12,9 @@
     <Design.DataContext>
 		<vm:SettingsTabViewModel />
 	</Design.DataContext>
+    <UserControl.Styles>
+        
+    </UserControl.Styles>
     <!-- 添加滚动视图 -->
     <ScrollViewer HorizontalScrollBarVisibility="Disabled"
                   VerticalScrollBarVisibility="Auto" VerticalSnapPointsType="None">
@@ -26,13 +29,6 @@
                                  IconSource="Setting"
                                  IsExpanded="True">
                 <StackPanel Margin="10,10,10,10">
-                    <!-- 窗口设置 -->
-                    <TextBlock Text="窗口设置" 
-                               FontSize="13" 
-                               FontWeight="SemiBold" 
-                               Margin="0,0,0,8"
-                               Foreground="#666"/>
-                    
                     <Grid Margin="0,4">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -75,19 +71,70 @@
                                       OffContent=""/>
                     </Grid>
                     
+                    <Grid Margin="0,4">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="迷你模式" 
+                                   VerticalAlignment="Center"
+                                   Grid.Column="0"/>
+                        <ToggleSwitch IsChecked="{Binding IsMiniModeEnabled, Mode=TwoWay}"
+                                      Grid.Column="1"
+                                      OnContent=""
+                                      OffContent=""/>
+                    </Grid>
+                    
                     <!-- 主题设置 -->
-                    <TextBlock Text="主题设置" 
-                               FontSize="13" 
-                               FontWeight="SemiBold" 
-                               Margin="0,15,0,8"
-                               Foreground="#666"/>
-                    <TextBlock Text="主题配置待实现..." 
-                               Foreground="Gray"
-                               FontSize="12"
-                               Margin="0,4"/>
+                    <Grid Margin="0,4">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="主题设置" 
+                                   VerticalAlignment="Center"
+                                   Grid.Column="0"/>
+                        <ColorPicker Grid.Column="1" 
+                                     Color="{Binding CustomAccentColor}"
+                                     Palette="{Binding PredefinedColors}"
+                                     IsColorPreviewVisible ="False">
+                            <ColorPicker.Styles>
+                                <Style Selector="FlyoutPresenter">
+                                    <Setter Property="RenderTransform">
+                                        <!-- 在这里应用缩放变换 -->
+                                        <ScaleTransform ScaleX="0.7" ScaleY="0.7" />
+                                    </Setter>
+                                </Style>
+                            </ColorPicker.Styles>
+                        </ColorPicker>
+                    </Grid>
                 </StackPanel>
             </fa:SettingsExpander>
             
+            <fa:SettingsExpander Header="悬浮球应用管理"
+                                 IconSource="AppFolder"
+                                 IsExpanded="True">
+                <StackPanel Margin="10,10,0,10">
+                    <Button Content="+ 添加应用"
+                            Command="{Binding AddApplicationCommand}"
+                            HorizontalAlignment="Left"/>
+                    
+                    <ListBox ItemsSource="{Binding Applications}" Margin="0,10,0,0">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <Grid ColumnDefinitions="*,Auto">
+                                    <TextBlock Text="{Binding Name}" VerticalAlignment="Center"/>
+                                    <Button Grid.Column="1" 
+                                            Content="删除" 
+                                            Command="{Binding $parent[ListBox].DataContext.RemoveApplicationCommand}"
+                                            CommandParameter="{Binding}"/>
+                                </Grid>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </StackPanel>
+            </fa:SettingsExpander>
+
             <!-- 页签管理分组 -->
             <fa:SettingsExpander Header="页签管理" 
                                  IconSource="Library">
