--- a/MicroDock/Views/Controls/CircularLauncherView.axaml
+++ b/MicroDock/Views/Controls/CircularLauncherView.axaml
@@ -14,14 +14,19 @@
         </ItemsControl.ItemsPanel>
         <ItemsControl.ItemTemplate>
             <DataTemplate DataType="controls:ILauncherItem">
-                <Border Width="40" Height="40" CornerRadius="20" Background="LightBlue"
-                        PointerEntered="Item_PointerEntered">
-                    <TextBlock Text="{Binding Name}" 
-                               HorizontalAlignment="Center" 
-                               VerticalAlignment="Center"
-                               TextWrapping="Wrap"
-                               TextAlignment="Center"
-                               FontSize="10"/>
+                <Border Width="{Binding ElementName=Root, Path=ItemSize}"
+                        Height="{Binding ElementName=Root, Path=ItemSize}"
+                        CornerRadius="20" Background="LightBlue"
+                        PointerReleased="Item_PointerReleased">
+                    <Grid>
+                        <Image Source="{Binding Icon}" Width="24" Height="24" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <TextBlock Text="{Binding Name}"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Center"
+                                   TextWrapping="Wrap"
+                                   TextAlignment="Center"
+                                   FontSize="10"/>
+                    </Grid>
                 </Border>
             </DataTemplate>
         </ItemsControl.ItemTemplate>
