--- a/MicroDock/Views/Controls/CircularLauncherView.axaml
+++ b/MicroDock/Views/Controls/CircularLauncherView.axaml
@@ -6,6 +6,11 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="MicroDock.Views.Controls.CircularLauncherView"
              x:Name="Root">
+     <UserControl.Transitions>
+         <Transitions>
+             <DoubleTransition Property="Opacity" Duration="0:0:0.12" Easing="CircularEaseOut"/>
+         </Transitions>
+     </UserControl.Transitions>
     <ItemsControl Name="ItemsControl">
         <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
