--- a/MicroDock/Views/MiniBallWindow.axaml
+++ b/MicroDock/Views/MiniBallWindow.axaml
@@ -2,8 +2,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:controls="clr-namespace:MicroDock.Views.Controls"
-        xmlns:ext="using:MicroDock.Extension"
         mc:Ignorable="d" d:DesignWidth="128" d:DesignHeight="128"
         x:Class="MicroDock.Views.MiniBallWindow"
         Title="MiniBallWindow"
@@ -15,10 +13,8 @@
         Width="64" Height="64"
         SizeToContent="Manual"
         WindowStartupLocation="CenterScreen">
-    <Window.Resources>
-        <!--<ext:HalfValueConverter x:Key="HalfValueConverter"/>-->
-    </Window.Resources>
-    <Grid Name="MiniBg" Background="Red">
+    
+    <Grid Name="MiniBg" Background="Transparent">
         <Border Name="Ball" 
                 Width="64"
                 Height="64"
@@ -29,15 +25,5 @@
                 PointerPressed="OnPointerPressed"
                 PointerReleased="OnPointerReleased">
         </Border>
-        
-        <controls:CircularLauncherView Name="LauncherView"
-                                       IsVisible="False"/>
-
-        <!-- <Button Name="CancelButton" -->
-        <!--         Content="取消" -->
-        <!--         IsVisible="False" -->
-        <!--         HorizontalAlignment="Center" -->
-        <!--         VerticalAlignment="Center" -->
-        <!--         Click="CancelButton_Click"/> -->
     </Grid>
 </Window>
