--- a/MicroDock/Views/Tabs/SettingsTabView.axaml
+++ b/MicroDock/Views/Tabs/SettingsTabView.axaml
@@ -28,7 +28,7 @@
             <!-- 基础设置分组 -->
             <fa:SettingsExpander Header="基础设置" 
                                  IconSource="Setting"
-                                 IsExpanded="True">
+                                 IsExpanded="False">
                 <StackPanel Margin="10,10,10,10">
                     <Grid Margin="0,4">
                         <Grid.ColumnDefinitions>
@@ -111,30 +111,6 @@
                     </Grid>
                 </StackPanel>
             </fa:SettingsExpander>
-            
-            <fa:SettingsExpander Header="悬浮球应用管理"
-                                 IconSource="AppFolder"
-                                 IsExpanded="True">
-                <StackPanel Margin="10,10,0,10">
-                    <Button Content="+ 添加应用"
-                            Command="{Binding AddApplicationCommand}"
-                            HorizontalAlignment="Left"/>
-                    
-                    <ListBox x:Name="AppsList" ItemsSource="{Binding Applications}" Margin="0,10,0,0">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate x:DataType="db:ApplicationDB">
-                                <Grid ColumnDefinitions="*,Auto">
-                                    <TextBlock Text="{Binding Name}" VerticalAlignment="Center"/>
-                                    <Button Grid.Column="1" 
-                                            Content="删除" 
-                                            Command="{Binding #AppsList.DataContext.RemoveApplicationCommand}"
-                                            CommandParameter="{Binding}"/>
-                                </Grid>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                </StackPanel>
-            </fa:SettingsExpander>
 
             <!-- 迷你模式设置 -->
             <fa:SettingsExpander Header="迷你模式设置"
@@ -202,6 +178,25 @@
                         <TextBlock Text="触发后自动收起" VerticalAlignment="Center"/>
                         <ToggleSwitch Grid.Column="1" IsChecked="{Binding MiniAutoCollapseAfterTrigger, Mode=TwoWay}"/>
                     </Grid>
+                    <StackPanel Margin="10,10,0,10">
+                        <Button Content="+ 添加应用"
+                            Command="{Binding AddApplicationCommand}"
+                            HorizontalAlignment="Left"/>
+                    
+                        <ListBox x:Name="AppsList" ItemsSource="{Binding Applications}" Margin="0,10,0,0">
+                            <ListBox.ItemTemplate>
+                                <DataTemplate x:DataType="db:ApplicationDB">
+                                    <Grid ColumnDefinitions="*,Auto">
+                                        <TextBlock Text="{Binding Name}" VerticalAlignment="Center"/>
+                                        <Button Grid.Column="1" 
+                                                Content="删除" 
+                                                Command="{Binding #AppsList.DataContext.RemoveApplicationCommand}"
+                                                CommandParameter="{Binding}"/>
+                                    </Grid>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>
+                    </StackPanel>
                 </StackPanel>
             </fa:SettingsExpander>
 
@@ -227,20 +222,36 @@
             <!-- 插件设置分组 -->
             <fa:SettingsExpander Header="插件设置" 
                                  IconSource="ViewAll">
-                <StackPanel Margin="10,10,0,10">
-                    <TextBlock Text="插件管理" 
-                               FontSize="13" 
-                               FontWeight="SemiBold" 
-                               Margin="0,0,0,8"
-                               Foreground="#666"/>
-                    <TextBlock Text="插件配置功能待实现..." 
+                <StackPanel Margin="0,4,0,4" Spacing="12">
+                    <!-- 插件设置列表 -->
+                    <ItemsControl ItemsSource="{Binding PluginSettings}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <fa:SettingsExpander Header="{Binding PluginName}"
+                                                     Margin="0,0,0,8">
+                                    <StackPanel Margin="0" Spacing="8">
+                                        <!-- 插件设置UI或提示信息 -->
+                                        <ContentControl Content="{Binding SettingsControl}"
+                                                        IsVisible="{Binding HasSettings}"/>
+                                        
+                                        <!-- 如果没有设置，显示提示 -->
+                                        <TextBlock Text="该插件没有设置项" 
+                                                   Foreground="Gray"
+                                                   FontSize="12"
+                                                   Margin="8,0,0,0"
+                                                   IsVisible="{Binding !HasSettings}"/>
+                                    </StackPanel>
+                                </fa:SettingsExpander>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                    
+                    <!-- 如果没有插件 -->
+                    <TextBlock Text="当前没有加载任何插件" 
                                Foreground="Gray"
                                FontSize="12"
-                               Margin="0,4"/>
-                    <TextBlock Text="未来将支持插件的启用、禁用和配置功能" 
-                               Foreground="Gray"
-                               FontSize="11"
-                               Margin="0,4,0,0"/>
+                               Margin="0,8,0,0"
+                               IsVisible="{Binding !PluginSettings.Count}"/>
                 </StackPanel>
             </fa:SettingsExpander>
             
