--- a/MicroDock/Views/MainWindow.axaml
+++ b/MicroDock/Views/MainWindow.axaml
@@ -1,24 +1,24 @@
 <Window
-    xmlns="https://github.com/avaloniaui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:vm="using:MicroDock.ViewModels"
-	xmlns:models="using:MicroDock.Models"
-	xmlns:fa="clr-namespace:FluentAvalonia.UI.Controls;assembly=FluentAvalonia"
-    mc:Ignorable="d"
-    d:DesignWidth="640"
-    d:DesignHeight="480"
-	Width="800"
-	Height="600"
-	MinWidth="640"
-	MinHeight="480"
-    x:Class="MicroDock.Views.MainWindow"
-    x:DataType="vm:MainWindowViewModel"
-    ExtendClientAreaToDecorationsHint="True"
-    ExtendClientAreaChromeHints="NoChrome"
-    CanResize="True"
-    Icon="/Assets/avalonia-logo.ico">
+xmlns="https://github.com/avaloniaui"
+xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+xmlns:vm="using:MicroDock.ViewModels"
+xmlns:models="using:MicroDock.Models"
+xmlns:fa="clr-namespace:FluentAvalonia.UI.Controls;assembly=FluentAvalonia"
+mc:Ignorable="d"
+d:DesignWidth="480"
+d:DesignHeight="360"
+Width="800"
+Height="600"
+MinWidth="480"
+MinHeight="360"
+x:Class="MicroDock.Views.MainWindow"
+x:DataType="vm:MainWindowViewModel"
+ExtendClientAreaToDecorationsHint="True"
+ExtendClientAreaChromeHints="NoChrome"
+CanResize="True"
+Icon="/Assets/avalonia-logo.ico">
 
 	<Window.Styles>
 		<!-- 关闭按钮样式 -->
@@ -28,10 +28,10 @@
 		<Style Selector="Button.CloseButton:pressed">
 			<Setter Property="Background" Value="{DynamicResource ButtonBackgroundPressed}"/>
 		</Style>
-		
+
 		<!-- NavigationViewItem 样式 -->
 		<Style Selector="fa|NavigationViewItem">
-			<Setter Property="Margin" Value="0,8"/>
+			<Setter Property="Margin" Value="0,0"/>
 			<Setter Property="Padding" Value="0,8"/>
 			<Setter Property="MinHeight" Value="40"/>
 		</Style>
@@ -39,12 +39,12 @@
 		<Style Selector="fa|NavigationViewItem:selected /template/ Border#LayoutRoot">
 			<Setter Property="Background" Value="{DynamicResource SystemAccentColorLight2}"/>
 		</Style>
-		
+
 		<!-- 悬停状态样式 -->
 		<Style Selector="fa|NavigationViewItem:pointerover /template/ Border#LayoutRoot">
 			<Setter Property="Background" Value="{DynamicResource SystemAccentColorLight3}"/>
 		</Style>
-		
+
 	</Window.Styles>
 
 	<Design.DataContext>
@@ -58,56 +58,59 @@
 			<!-- 内容区域 -->
 		</Grid.RowDefinitions>
 
-	<!-- 自定义标题栏 -->
-	<Grid Grid.Row="0" Background="{DynamicResource SystemAccentColor}" PointerPressed="TitleBar_PointerPressed">
-		<TextBlock Text="MicroDock"
-                       VerticalAlignment="Center"
-                       Margin="10,0"
-                       Foreground="White"/>
+		<!-- 自定义标题栏 -->
+		<Grid Grid.Row="0" Background="{DynamicResource SystemAccentColor}" PointerPressed="TitleBar_PointerPressed">
+			<TextBlock Text="MicroDock"
+					   VerticalAlignment="Center"
+					   Margin="10,0"
+					   Foreground="White"/>
 
 			<!-- 自定义关闭按钮 -->
 			<Button Content="✕"
-                    Width="30"
-                    Height="30"
+					Width="30"
+					Height="30"
 					Classes="CloseButton"
 					Padding="0"
 					VerticalContentAlignment="Center"
 					HorizontalContentAlignment="Center"
-                    HorizontalAlignment="Right"
+					HorizontalAlignment="Right"
 					Background="Transparent"
-                    Click="CloseButton_OnClick"/>
+					Click="CloseButton_OnClick"/>
 		</Grid>
 
-	<!-- 内容区域 - NavigationView -->
-	<fa:NavigationView Grid.Row="1"
-						x:Name="MainNav"
-						OpenPaneLength="128"
-						CompactPaneLength="48"
-						CompactModeThresholdWidth="700"
-						IsPaneToggleButtonVisible="True"
-						IsBackButtonVisible="False"
-						PaneDisplayMode="Left"
-						Background="Transparent">
-		
-		<!-- 主导航菜单项（动态添加在代码中） -->
-		<fa:NavigationView.MenuItems>
-			<!-- 菜单项将在MainWindow.axaml.cs中动态添加 -->
-		</fa:NavigationView.MenuItems>
-		
-		<!-- 底部固定菜单（设置） -->
-<!--		<fa:NavigationView.FooterMenuItems>
+		<!-- 内容区域 - NavigationView -->
+		<fa:NavigationView Grid.Row="1"
+						   x:Name="MainNav"
+						   OpenPaneLength="128"
+						   CompactPaneLength="48"
+						   CompactModeThresholdWidth="700"
+						   IsPaneToggleButtonVisible="True"
+						   IsBackButtonVisible="False"
+						   PaneDisplayMode="Left"
+						   Background="Transparent">
+
+			<!-- 主导航菜单项（动态添加在代码中） -->
+			<fa:NavigationView.MenuItems>
+				<!-- 菜单项将在MainWindow.axaml.cs中动态添加 -->
+			</fa:NavigationView.MenuItems>
+
+			<!-- 底部固定菜单（设置） -->
+			<!--		<fa:NavigationView.FooterMenuItems>
 			<fa:NavigationViewItem Content="设置" Tag="Settings">
-				<fa:NavigationViewItem.IconSource>
-					<fa:SymbolIconSource Symbol="Setting"/>
-				</fa:NavigationViewItem.IconSource>
+			<fa:NavigationViewItem.IconSource>
+			<fa:SymbolIconSource Symbol="Setting"/>
+			</fa:NavigationViewItem.IconSource>
 			</fa:NavigationViewItem>
-		</fa:NavigationView.FooterMenuItems>-->
-		
-		<!-- 内容区域 -->
-		<fa:NavigationView.Content>
-			<ContentControl Content="{Binding CurrentView}"/>
-		</fa:NavigationView.Content>
-	</fa:NavigationView>
+			</fa:NavigationView.FooterMenuItems>-->
+
+			<!-- 内容区域 -->
+			<fa:NavigationView.Content>
+				<ScrollViewer VerticalScrollBarVisibility="Auto"
+							  HorizontalScrollBarVisibility="Disabled">
+					<ContentControl Padding="6,6" Content="{Binding CurrentView}"/>
+				</ScrollViewer>
+			</fa:NavigationView.Content>
+		</fa:NavigationView>
 
 	</Grid>
 </Window>
