--- a/MicroDock/Views/Tabs/ApplicationTabView.axaml
+++ b/MicroDock/Views/Tabs/ApplicationTabView.axaml
@@ -18,22 +18,19 @@
                 Margin="0,0,0,10"/>
 
         <!-- 网格式图标展示 -->
-        <ScrollViewer HorizontalScrollBarVisibility="Disabled" 
-                      VerticalScrollBarVisibility="Auto"
+        <ItemsControl ItemsSource="{Binding Applications}"
                       Margin="0,10,0,0">
-            <ItemsControl ItemsSource="{Binding Applications}">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <WrapPanel Orientation="Horizontal" ItemSpacing="2"/>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <controls:AppItemControl />
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </ScrollViewer>
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel Orientation="Horizontal" ItemSpacing="2"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <controls:AppItemControl />
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
 
         <TextBlock Text="暂无应用程序，请拖入文件或点击上方按钮添加"
                    Foreground="Gray"
