使用比较现代化的设计

--- a/MicroDock/Views/Tabs/LogViewerTabView.axaml
+++ b/MicroDock/Views/Tabs/LogViewerTabView.axaml
@@ -58,7 +58,7 @@
                 Background="{DynamicResource CardBackgroundFillColorDefaultBrush}">
             <Grid>
                 <ScrollViewer x:Name="LogScrollViewer"
-                              HorizontalScrollBarVisibility="Auto"
+                              HorizontalScrollBarVisibility="Disabled"
                               VerticalScrollBarVisibility="Auto"
                               Padding="0,12,0,12">
                     <ItemsControl ItemsSource="{Binding FilteredLogs}">
